[tool.poetry]
name = "dz6"
version = "0.1.0"
description = ""
authors = ["bobantonbob <130400459+bobantonbob@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
faker = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
